# XKCD_archiver

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  downloadXKCD.py  downloadXKCD_GUI  downloadXKCD_GUI.pyw  pyproject.toml  requirements.txt  run_downloadXKCD.py  setup.py
.github/workflows/: ci.yml  codeql.yml
XKCD_archiver/: __main__.py  archive_XKCD.bat  cache.py  downloadXKCD.py  downloadXKCD_GUI.pyw  downloadXKCD_GUI_class.pyw  downloader.py  helper_functions.py  install_dependencies.bat  metadata.py  run_downloadXKCD.py  tui.py
tests/: test_cache.py  test_cli.py  test_downloader.py  test_integration.py  test_metadata.py
