[project]
name = "xkcd-archiver"
version = "3.0.0"
description = "Downloads every XKCD comic"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "David Antonini", email = "toonarmycaptain@hotmail.com" },
]
dependencies = [
    "requests>=2.32",
]

[project.scripts]
xkcd-archiver = "XKCD_archiver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["XKCD_archiver"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]
